// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channels selectors - channelById 1`] = `
Immutable.Map {
  "id": 1,
  "name": "Channel 1",
  "private": true,
  "address": "zs1testaddress1",
  "unread": 12,
  "description": "Channel about 1",
  "advertFee": 0.15,
  "keys": Immutable.Map {
    "ivk": "incoming-viewing-key-1",
    "sk": "test-secret-key",
  },
}
`;

exports[`Channels selectors - channels 1`] = `
Immutable.ChannelsState {
  "data": Immutable.List [
    Immutable.Map {
      "id": 0,
      "name": "Channel 0",
      "private": false,
      "address": "zs1testaddress0",
      "unread": 12,
      "description": "",
      "advertFee": 0.15,
      "keys": Immutable.Map {
        "ivk": "incoming-viewing-key-0",
        "sk": "test-secret-key",
      },
    },
    Immutable.Map {
      "id": 1,
      "name": "Channel 1",
      "private": true,
      "address": "zs1testaddress1",
      "unread": 12,
      "description": "Channel about 1",
      "advertFee": 0.15,
      "keys": Immutable.Map {
        "ivk": "incoming-viewing-key-1",
        "sk": "test-secret-key",
      },
    },
    Immutable.Map {
      "id": 2,
      "name": "Channel 2",
      "private": false,
      "address": "zs1testaddress2",
      "unread": 12,
      "description": "",
      "advertFee": 0.15,
      "keys": Immutable.Map {
        "ivk": "incoming-viewing-key-2",
        "sk": "test-secret-key",
      },
    },
  ],
  "loader": Immutable.Record {
    "loading": true,
    "message": "Loading messages",
  },
}
`;

exports[`Channels selectors - loader 1`] = `
Immutable.Record {
  "loading": true,
  "message": "Loading messages",
}
`;

exports[`Channels selectors - ownedChannels 1`] = `
Immutable.List [
  Immutable.Map {
    "id": 1,
    "name": "Channel 1",
    "private": true,
    "address": "zs1testaddress1",
    "unread": 12,
    "description": "Channel about 1",
    "advertFee": 0.15,
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
      "sk": "test-secret-key",
    },
  },
  Immutable.Map {
    "id": 2,
    "name": "Channel 2",
    "private": false,
    "address": "zs1testaddress2",
    "unread": 12,
    "description": "",
    "advertFee": 0.15,
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
      "sk": "test-secret-key",
    },
  },
  Immutable.Map {
    "id": 0,
    "name": "Channel 0",
    "private": false,
    "address": "zs1testaddress0",
    "unread": 12,
    "description": "",
    "advertFee": 0.15,
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
      "sk": "test-secret-key",
    },
  },
]
`;

exports[`Channels selectors - priceOracleChannel 1`] = `
Immutable.Map {
  "name": "priceOracle",
  "address": "ztestsapling1rwqrk7uclurs5dqm70g4zf0rh9dmjf60qqtw2n68pa37ycs2zccglcymjg0nnmus70m3wkdyxx0",
  "keys": Immutable.Map {
    "ivk": "zivktestsapling194t7fk8ns0v2u4jysmrmwyh2ymq52t5378ey8jym23d2dpy3d5pssyk97t",
  },
  "id": "priceOracleChannel",
}
`;
